2008-11-11  Daniel Borgmann  <danielb@openismus.com>

	* scratchpad/uimanager.vala: Kill the clutter

2008-10-26  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* configure.ac:
	* scratchpad/Makefile.am:
	* scratchpad/application.vala:
	* scratchpad/basewindow.vala:
	* scratchpad/documentview.vala:
	* vapi/guniqueapp.vapi: Remove guniqueapp, use libunique

2008-10-25  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* configure.ac:
	* scratchpad/Makefile.am:
	* scratchpad/application.vala:
	* scratchpad/document.vala:
	* scratchpad/documentwindow.vala:
	* scratchpad/settings.vala: Remove GnomeVFS dependency

2008-10-25  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* configure.ac:
	* scratchpad/Makefile.am:
	* scratchpad/basewindow.vala:
	* scratchpad/document.vala:
	* scratchpad/documentview.vala:
	* scratchpad/documentwindow.vala:
	* scratchpad/metadata.vala:
	* scratchpad/projecttree.vala:
	* scratchpad/projectwindow.vala:
	* scratchpad/settings.vala:
	* scratchpad/uimanager.vala: Port to gtksourceview-2.0, fix Vala compilation

2006-10-03  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* configure.ac: Bump version number
	* scratchpad/Makefile.am: Add defines, remove config.vala 
	* scratchpad/application.vala: Open project window, add SCRATCHPAD_INSTANCE env var
	* scratchpad/basewindow.vala: Use defines
	* scratchpad/documentwindow.vala: Use proper titlebar icon size
	* vapi/misc-utils.vala: Add define constants

2006-09-28  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* scratchpad/application.vala, scratchpad/basewindow.vala, 
	  scratchpad/document.vala, scratchpad/documentview.vala:
	  Patch by Jürg Billeter to compile with Vala SVN.

2006-09-27  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* scratchpad/document.vala: Make save operation "atomical".

2006-09-27  Daniel Borgmann  <daniel.borgmann@gmail.com>

	* scratchpad/application.vala: Info dialog regarding project windows